# open-robo-advisor

./: .gitignore  DEVELOPER.md  LICENSE  README.md  pyproject.toml
src/openroboadvisor/advisor/: asset_class_advisor.py  base_advisor.py  simple_advisor.py  suggestion.py
src/openroboadvisor/engine/: account.py  holdings.py  transaction.py
src/openroboadvisor/ledger/: __init__.py  account.py  asset.py  entry.py  ledger.py
src/openroboadvisor/portfolio/: __init__.py  account.py  portfolio.py
tests/openroboadvisor/advisor/: test_asset_class_advisor.py  test_simple_advisor.py
tests/openroboadvisor/engine/: test_account.py
tests/openroboadvisor/ledger/: test_account.py  test_ledger.py
tests/openroboadvisor/portfolio/: test_portfolio.py
tests/openroboadvisor_tests/advisor/: test_asset_class_advisor.py  test_simple_advisor.py
tests/openroboadvisor_tests/ledger/: test_account.py  test_ledger.py
tests/openroboadvisor_tests/portfolio/: test_account.py  test_portfolio.py
