[project]
name = "open-robo-advisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Riccomini", email = "criccomini@apache.org"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy==0.931",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
